# ttrends-rust

./: Cargo.toml
.github/: dependabot.yml
src/: main.rs
